--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta property="og:title" content="쎄끈빠근">
-  <meta property="og:description" content="좀비 PC등,크립터 Nj스텁등 다양한 자료 판매중">
+  <meta property="og:description" content="🔞 다양한 자료 🔞">
   <meta property="og:url" content="https://discord.gg/Hfry2tfUHU">
   <meta property="og:image" content="https://cdn.discordapp.com/attachments/808681231356133406/847097168673636352/3776842d63b6524d588df2b6e571cfa8.jpg">
   <meta content="#FFBCD9" data-react-helmet="true" name="theme-color">
